Added sim.py to run the simulation and split up code sections, added simulation cycles to params.ini

--- a/snn_sim/params.ini
+++ b/snn_sim/params.ini
@@ -2,8 +2,6 @@
 
 [general_params]
 
-VDD = 1.2
-VSS = 0
 
 [memristance_params]
 
@@ -34,4 +32,7 @@ cap = 2.9166e-13
 
 [simulator_settings]
 
+cycles = 2250
 STDP_cycle = 1
+VDD = 1.2
+VSS = 0
