Refactored the program a bit and made some modifications to sim.py

--- a/snn_sim/params.ini
+++ b/snn_sim/params.ini
@@ -5,6 +5,9 @@
 
 [memristance_params]
 
+Mp_in = 11929.23834
+Mn_in = 12500
+
 # Mean values
 HRS = 16e3
 LRS = 9e3
@@ -26,13 +29,15 @@ m_Vthn = 0.05
 [neuron_params]
 
 tper = 10e-9
-vthn = 0.00001
-cap = 2.9166e-13
+Vth = 550e-3
+#cap = 2.9166e-13
+cap = 29.16e-12
+
 
 
 [simulator_settings]
 
 cycles = 2250
 STDP_cycle = 1
-VDD = 1.2
-VSS = 0
+VDD = 0.6
+VSS = -0.6
