Set up the simulator for testing the stochastic neuron over all shapes

--- a/snn_sim/params.ini
+++ b/snn_sim/params.ini
@@ -5,12 +5,12 @@
 
 [memristance_params]
 
-Mp_in = 11929.23834
-Mn_in = 12500
+Mp_in = 97139.96
+Mn_in = 232860.4
 
 # Mean values
-HRS = 16e3
-LRS = 9e3
+HRS = 300e3
+LRS = 30e3
 tswp = 100e-9
 tswn = 100e-9
 Vthp = 0.75
@@ -28,17 +28,21 @@ m_Vthn = 0.05
 
 [neuron_params]
 
-tper = 10e-9
+tper = 5e-8
 Vth = 550e-3
-#cap = 2.9166e-13
-cap = 29.16e-12
-
+cap = 9e-12
+c1 = 0.3e-12
+c2 = 0.75e-12
+c3 = 1.2e-12
 
 
 [simulator_settings]
 
+# Clock cycles per unit delay from network file
+clk_per_del = 2
+
 #cycles = 250
-cycles = 20
+cycles = 70
 STDP_cycle = 1
 VDD = 0.6
 VSS = -0.6
